hphp/hack/test/sound_dynamic/typing/upcast.bad.php.exp
File "upcast.bad.php", line 5, characters 3-19:
Typing error (Typing[4110])
  File "upcast.bad.php", line 5, characters 13-19:
  Expected `dynamic`
  File "upcast.bad.php", line 4, characters 12-16:
  Type `mixed` is not a subtype of `dynamic` under dynamic-aware subtyping
File "upcast.bad.php", line 12, characters 3-29:
Typing error (Typing[4110])
  File "upcast.bad.php", line 11, characters 21-23:
  Expected `int`
  File "upcast.bad.php", line 12, characters 22-28:
  But got `dynamic`
  File "upcast.bad.php", line 12, characters 22-28:
  This type argument to `MyVector` must match exactly (it is invariant)
